MO: Fix links alignment

--- a/public/module.css
+++ b/public/module.css
@@ -339,8 +339,7 @@
   .onboarding-popup #onboarding-welcome .link-container .final-link {
     border-width: 0;
     color: #363a41;
-    display: flex;
-    flex-direction: column;
+    display: block;
     font-weight: 600;
     justify-content: center;
     padding: 0;
@@ -353,7 +352,9 @@
       bottom: 0;
       position: absolute;
       padding: 10px;
-      width: 150px; }
+      display: block;
+      text-align: center;
+      width: 100%; }
 
 #onboarding-welcome .final-link {
   display: block;
