--- a/scss/_popup.scss
+++ b/scss/_popup.scss
@@ -147,8 +147,7 @@
       .final-link {
         border-width: 0;
         color: #363a41;
-        display: flex;
-        flex-direction: column;
+        display: block;
         font-weight: 600;
         justify-content: center;
         padding: 0;
@@ -164,7 +163,9 @@
           bottom: 0;
           position: absolute;
           padding: 10px;
-          width: 150px;
+          display: block;
+          text-align: center;
+          width: 100%;
         }
       }
     }
